Added sliders, documentation is now in latex, new Java build, CMake is used to create project in OS X, many other changes. This is NOT a release! Next step will be to get the CMake-built project into the right name and directory.
git-svn-id: svn://svn.code.sf.net/p/nyquist/code/trunk/nyquist@182 7a394894-9432-4381-9535-169912d1abbc